[gd_scene load_steps=2 format=3 uid="uid://b3170v1u5of2d"]

[ext_resource type="Script" path="res://addons/diisis/editor/quit_dialog.gd" id="1_pn46y"]

[node name="QuitDialog" type="Window"]
auto_translate_mode = 1
title = "Close DIISIS?"
initial_position = 4
size = Vector2i(301, 150)
transient = true
exclusive = true
borderless = true
always_on_top = true
popup_window = true
script = ExtResource("1_pn46y")

[node name="PanelContainer" type="PanelContainer" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="CenterContainer" type="CenterContainer" parent="PanelContainer"]
layout_mode = 2
size_flags_horizontal = 4

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer/CenterContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="RichTextLabel" type="RichTextLabel" parent="PanelContainer/CenterContainer/VBoxContainer"]
layout_mode = 2
bbcode_enabled = true
text = "fgdfg"
fit_content = true

[node name="HBoxContainer" type="HBoxContainer" parent="PanelContainer/CenterContainer/VBoxContainer"]
layout_mode = 2

[node name="CancelButton" type="Button" parent="PanelContainer/CenterContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 0
text = "Stay"

[node name="SaveButton" type="Button" parent="PanelContainer/CenterContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
text = "Save"

[node name="QuitButton" type="Button" parent="PanelContainer/CenterContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 8
text = "Close DIISIS"

[connection signal="about_to_popup" from="." to="." method="_on_about_to_popup"]
[connection signal="pressed" from="PanelContainer/CenterContainer/VBoxContainer/HBoxContainer/CancelButton" to="." method="_on_cancel_button_pressed"]
[connection signal="pressed" from="PanelContainer/CenterContainer/VBoxContainer/HBoxContainer/SaveButton" to="." method="_on_save_button_pressed"]
[connection signal="pressed" from="PanelContainer/CenterContainer/VBoxContainer/HBoxContainer/QuitButton" to="." method="_on_quit_button_pressed"]
